--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
     "target": "ES6",
-    "module": "Node16",
+    "module": "CommonJS",
     "strict": true,
     "noImplicitAny": false,
-    "moduleResolution": "Node16",
     "esModuleInterop": true,
     "skipLibCheck": true,
     "outDir": "./dist",
